--- a/app.json
+++ b/app.json
@@ -158,6 +158,9 @@
       "plan": "heroku-postgresql"
     }],
     "buildpacks": [{
-      "url": "heroku-community/apt"
+      "url": "heroku-community/apt"   
+      },
+      {
+      "url": "heroku/python"
       }]
   }
